--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.das6301.simmonswindowcleaning">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +13,8 @@
         android:theme="@style/Theme.SimmonsWindowCleaning">
         <activity android:name=".RequestServices" />
         <activity android:name=".Homepage" />
-        <activity android:name=".NewUser" />
-        <activity android:name=".ExistingUser" />
+        <activity android:name=".Register" />
+        <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
