--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.das6301.simmonswindowcleaning">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimmonsWindowCleaning">
+        <activity android:name=".DisplayServicies"></activity>
+        <activity android:name=".aboutUs" />
         <activity android:name=".RequestServices" />
         <activity android:name=".Homepage" />
         <activity android:name=".Register" />
