--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimmonsWindowCleaning">
-        <activity android:name=".DisplayServicies"></activity>
+        <activity android:name=".DisplayServices"></activity>
         <activity android:name=".aboutUs" />
         <activity android:name=".RequestServices" />
         <activity android:name=".Homepage" />
